# simple-utf8-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  simple_utf8.cc  simple_utf8.h
.github/workflows/: tests.yml
example/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  benchmark.cc  filedata_test.cc  simple_test.cc  util.cc  util.h
tests/data/: UTF-8-cn-codepoints.txt  UTF-8-cn.txt  UTF-8-demo-codepoints.txt  UTF-8-en-codepoints.txt  UTF-8-en.txt  UTF-8-random-1-codepoints.txt  UTF-8-random-1.txt
